assets/css/base.css
/* ... */
/* Rounded sliders */
.slider.round{
    border-radius: 1.5rem;
}
*{
    border-width: 0;
    margin: 0;
    padding:0;
    font-family: Arial, "Helvetica Neue", Helvetica, "Source Han Sans CN", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
}
body{
    overflow: hidden;
    height: 100vh;
    background-color: var(--c-background);
}
a:link,
a:visited{
    color: var(--c-link);
    text-decoration: none;
    border-style: dashed;
    border-width: 0.1rem;
    border-color: transparent;
}
a:hover{
    border-style: dashed;
    border-width: 0.1rem;
    border-color: var(--c-read);
    box-shadow: var(--c-thick-font) 0px 1px 3px, var(--c-normal-font) 0px 1px 2px;
}
.bar_left_button{
    background-color: var(--c-bar_side);
}
.bar_title{
    background-color: var(--c-bar_middle);
}
.toc_title_for_bar{
    background-color: var(--c-bar_side);
    color: var(--c-bar-toc_fg);
}
.bar1, .bar2, .bar3{
    background-color: var(--c-bar-ham_fg);
}
.left{
    background-color: var(--c-background_left);
    -webkit-box-shadow: -0.03125rem -0.0625rem 0.375rem 0.1875rem var(--c-shadow);
            box-shadow: -0.03125rem -0.0625rem 0.375rem 0.1875rem var(--c-shadow);
    /*上面盒子阴影的六个参数：水平阴影位置（负值为向下），竖直阴影位置，模糊距离，阴影尺寸，颜色，inset 内阴影*/
}
.left_non-footer{
    margin-bottom: 1.25rem;
    margin-top: 1rem;
    /* 这一行是为了在高度不够显示时出现进度条 */
    overflow-y: auto;
}
.left_non-footer_option{
    margin-right: 0.75rem;
}
.left_non-footer_option_active, .left_non-footer_option_active a{
    color: var(--c-thick-font);
}
.left_non-footer_option_non-active{
    color: var(--c-normal-font);
}
.left_non-footer_head_title{
    color: var(--c-normal-font);
}
.left_non-footer_head_subtitle{
    color: var(--c-normal-font);
}
.left_non-footer_main{
    margin-left: 12%;
    padding-top: 0.628rem;
}
.left_non-footer li{
    list-style: none;
}
.left_non-footer .h1{
    color: var(--c-normal-font);
}
.left_non-footer .h2{
    color: var(--c-normal-font);
}
.left_non-footer .h1.active::after {
    content: "◂";
}
.left_non-footer .h2.active::after {
    content: "<";
}
.left_non-footer_main .active a {
    color: var(--c-thick-font);
}
.left_footer{
    margin-bottom: 1.35rem;
    color: var(--c-normal-font);
    border-bottom: 0.1rem solid;
    border-top: 0.1rem solid;
}
.right_head_title{
    color: var(--c-normal-font);
}
.right_head_des{
    color: var(--c-normal-font);
}
.right_main_article{
    color: var(--c-read);
}
.right_main_article h1{
    border-style: groove;
    border-width: 0.3rem;
    border-color: var(--c-table_odd);
}
.right_main_article h2{
    border-style: ridge;
    border-width: 0.26rem;
    border-color: var(--c-table_odd);
}
.right_main_article h3{
    border-style: inset;
    border-width: 0.22rem;
    border-color: var(--c-table_odd);
}
.right_main_article h4{
    border-style: outset;
    border-width: 0.18rem;
    border-color: var(--c-table_odd);
}
.right_main_article h5{
    border-style: double;
    border-width: 0.14rem;
    border-color: var(--c-table_odd);
}
.right_main_article h6{
    border-style: solid;
    border-width: 0.1rem;
    border-color: var(--c-table_odd);
}
/* 段落区 */
.right_main_article p{
    overflow-x: auto; /*为的是让宽一些的图片不把整个右边撑开*/
    overflow-y: hidden;
}
/* 链接区 */
.right_main_article p a,
.right_main_article table a,
.right_main_article li a{
    text-decoration: underline;
}
/* 分割线 */
.right_main_article hr{
    height: 1.5rem;
    border: none;
    border-top: 0.15rem dotted;
}
/* 图片区 */
.right_main_article figure{
    text-align: center;
}
.right_main_article img{
    width: auto;
    height: auto;
    max-width: 90%;
    max-height: 100%;
}
.right_main_article figcaption{
    font-size: 75%
}
/* 表格区 */
.right_main_article table{
    margin: auto;
    background-color: var(--c-table-footnote);
    margin-bottom: 0.25rem;
}
.right_main_article thead tr{
    background: var(--c-table-footnote);
}
.right_main_article th{
    border-bottom: 0.125rem solid var(--c-table_border);
    padding-top: 0.125rem;
    padding-left: 0.7rem;
    padding-right: 0.7rem;
}
.right_main_article td{
    padding-left: 0.7rem;
    padding-right: 0.7rem;
}
.right_main_article tbody tr:nth-child(even){
    background: var(--c-table_even);
}
.right_main_article tbody tr:nth-child(odd){
    background: var(--c-table_odd);
}
.record-blank-cell{
    border-top: 0.125rem solid var(--c-table_border);
    border-right: 0.125rem solid var(--c-table_border);
    border-bottom: none;
    border-left: none;
}
.record-total-cell{
    border-top: double var(--c-table_border);
    border-right: 0.125rem solid var(--c-table_border);
    border-bottom: double var(--c-table_border);
    border-left: 0.125rem solid var(--c-table_border);
    padding: 0.5rem;
    background-color: var(--c-notation_bg);
    color: var(--c-notation_fg);
}
.record-odd-cell{
    border: 0.125rem solid var(--c-table_border);
    background-color: var(--c-table_odd);
    padding: 0.5rem;
}
.record-even-cell{
    border: 0.125rem solid var(--c-table_border);
    background: var(--c-table_even);
    padding: 0.5rem;
}
/* 代码区 *//* 行内代码 */
.right_main_article code{
    background-color: var(--c-code_bg);
    color: var(--c-code); /* 上面这两行不仅仅作用于行内代码，代码块也有作用 */
    padding-left: 0.5rem;
    padding-right: 0.5rem;
    padding-top: 0.15rem;
    padding-bottom: 0.15rem; /* 上面这四行也对代码块有效，但不希望这样，所以代码块那里重写覆盖了这四行 */
    font-family: FantasqueSansMono; /* 这行对代码块无效，是因为代码块在 <code> 里还有一个 <span> */
}
/* 代码区 *//* 代码块 */
.right_main_article .highlight table{ /* 覆盖表格区的背景颜色 */
    background-color: var(--c-code_bg);
}
.right_main_article .highlight table tbody tr td.lntd{
    border-left-style: solid;
    border-left-color: grey;
    border-left-width: 0.1rem;
}
.right_main_article pre{ /* 代码块整体，一个矩形 */
    background-color: var(--c-code_bg); /* 未指定语言的代码块没有表格结构，所以这里还要再次指明背景 */
    overflow-x: auto; /* 这一行好像没什么用 */
    /* 它还有一些边距、行高的设置，见 normal 与 small */
}
/* ... */

